--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,49 @@
 
 body {
   font-family: "Kumbh Sans", sans-serif;
-  background: blue;
+  background: #ffffff;
+}
+
+.carousel {
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+}
+
+.image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: 0px 82px;
+}
+
+.inner {
+  white-space: nowrap;
+  transition: transform 0.3s;
+}
+
+.carousel-item {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  color: #fff;
+}
+
+.indicators {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  z-index: 99;
+  top: 50%;
+  left: 50%;
+}
+
+.indicators > button {
+  margin: 5px;
+}
+
+.indicators > button.active {
+  background-color: green;
+  color: #fff;
 }
