feat: add mobile version text

--- a/src/index.css
+++ b/src/index.css
@@ -49,11 +49,11 @@ body {
   left: 50%;
 }
 
-.indicators > button {
+/* .indicators > button {
   margin: 5px;
-}
-
+} */
+/* 
 .indicators > button.active {
   background-color: green;
   color: #fff;
-}
+} */
