--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 .carousel {
   overflow: hidden;
   width: 100%;
-  position: relative;
+  height: 288px;
 }
 
 .image {
@@ -42,11 +42,11 @@ body {
 
 .indicators {
   display: flex;
-  justify-content: center;
-  position: absolute;
+  justify-content: space-between;
+  position: relative;
   z-index: 99;
-  top: 50%;
-  left: 50%;
+  bottom: 155px;
+  margin-left: 16px;
 }
 
 input::placeholder {
