--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 
 .carousel {
   overflow: hidden;
-  width: 100%;
+  width: 375px;
   height: 288px;
 }
 
@@ -47,6 +47,8 @@ body {
   z-index: 99;
   bottom: 155px;
   margin-left: 16px;
+  margin-right: 16px;
+  z-index: 2;
 }
 
 input::placeholder {
@@ -63,4 +65,13 @@ input[type="number"] {
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+li {
+  color: #1d2026;
+  font-family: Kumbh Sans;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px; /* 144.444% */
+  margin-top: 20px;
 }
