--- a/src/index.css
+++ b/src/index.css
@@ -78,10 +78,19 @@ li {
 
 @media screen and (min-width: 1440px) {
   .carousel {
+    /* display: none; */
+  }
+
+  .indicators {
     display: none;
   }
 
   .App {
     padding: 28px 165px 132px 165px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 125px;
+    margin-top: 80px;
   }
 }
